# t-circle_blink

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  RESUMEN_SESION_2025-11-23.md  partitions.csv  platformio.ini
.claude/: settings.local.json
data/: screenlog.0  ser_202601_optimized_int8.tflite
docs/: PLAN_TESTEO_V4.md  PLAN_TESTEO_V4_RESUMEN.md  RESUMEN_SESION_2026-01-11.md  RESUMEN_SESION_2026-01-17.md  RESUMEN_SESION_2026-01-22.md  RESUMEN_SESION_2026-01-25.md
extras/patches/: README.md  compatibility.h.patched  micro_graph.cpp.patched
lib/: ser_cnn.h
lib/Arduino_GFX-1.3.7/src/display/: Arduino_GC9D01N.h
lib/Mylibrary/: pin_config.h
spiffs_image/: ser_cnn_int8.tflite
src/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  config.h  emotion_model.cpp  emotion_model.h  idf_component.yml  main.cpp  mfcc_extractor.cpp  mfcc_extractor.h  profiler.cpp  profiler.h
test/: 4_memory-profiling  audio a mfcc en vivo UI.old  audio a mfcc en vivo.old  blink.old  mic test.old  mic+pc transfer.old
test/pruebas cnn/: cargar modelo tflite en littlefs  fase1-cargar modelo cuantizado
